[package]
name = "tcp_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3" # For join_all

# Add these for TLS
tokio-rustls = "0.26" # Check for latest version
rustls = "0.23"       # Check for latest version compatible with tokio-rustls
rustls-pki-types = "1"
rustls-pemfile = "2.2.0" # Check for latest version
