[package]
name = "tcp_benchmark"
version = "0.1.0"
edition = "2021" # Using 2021 as 2024 is not stable yet and might cause issues

# Define the library
[lib]
name = "tcp_benchmark_lib" # Optional: specify library name
path = "src/lib.rs"

# Define the server binary
[[bin]]
name = "server"
path = "src/bin/server.rs"

# Define the client binary
[[bin]]
name = "client"
path = "src/bin/client.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] } # Add clap for arg parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3" # For join_all

# Add these for TLS
tokio-rustls = "0.26" # Check for latest version
rustls = "0.23"       # Check for latest version compatible with tokio-rustls
rustls-pki-types = "1"
rustls-pemfile = "2.2.0" # Check for latest version
